@@ -40,6 +40,7 @@ Minor features
  * Page chooser now opens at the deepest ancestor page that covers all the pages of the required page type (Tim Heap)
  * ``PageChooserBlock`` now accepts a ``target_model`` option to specify the required page type (Tim Heap)
  * Modeladmin forms now respect ``fields`` / ``exclude`` options passed on custom model forms (Thejaswi Puthraya)
+ * Added new StreamField block type ``StaticBlock`` for blocks that occupy a position in a stream but otherwise have no configuration; see :ref:`streamfield_staticblock` (Benoît Vogel)
 
 
 Bug fixes
