@@ -1,0 +1,1 @@
+<p>PostsStaticBlock template</p>
